# value-systematization

./: FINDINGS.md  LITERATURE.md  README.md  SUPERVISOR_BRIEF.md  SUPERVISOR_SLIDES.md  econ_analysis.py  stat_analysis.py
src/: models.py  (+11 more)
transitivity/advice_reflection_platform/: .gitignore  CLI_RUNNERS_README.md  README.md  __init__.py  app.py  experiment_families.py  experiment_results.py  experiment_runner.py  pyproject.toml
transitivity/advice_reflection_platform/backend/: __init__.py  affair_disclosure_prompts.py  ai_labor_displacement_threshold.py  ai_labor_prompts.py  analysis.py  artifacts.py  college_admissions_contextual_gap_numeric.py  college_admissions_contextual_gap_quick.py  defense_casualty_prompts.py  disaster_evacuation_prompts.py  elderly_driving_threshold_pilot.py  expense_reporting_evidence_quick.py  family_pilot.py  frontier_deployment_expected_deaths_quick.py  gateway.py  hiring_selection_prompts.py  loan_threshold_pilot.py  loyalty_disclosure_threshold_pilot.py  mentee_family_pilot.py  orchestrator.py  parser.py  performance_escalation_principle_gap.py  performance_escalation_threshold_pilot.py  reference_class_threshold_pilot.py  sampled_tradeoff_grid.py  scenario_factory.py  scenario_registry.py  schemas.py  selection_contextual_gap_probe.py
transitivity/advice_reflection_platform/docs/: architecture.md  dense_curve_methodology.md
transitivity/advice_reflection_platform/prompts/: affair_disclosure_prompts.py  ai_labor_prompts.py  basketball_starter_selection_prompts.py  college_admissions_sat_prompts.py  commercial_rent_renewal_prompts.py  (+19 more)
(+281 files in other folders)
