[project]
name = "advice-reflection-platform"
version = "0.1.0"
description = "MVP scaffold for studying value shifts under reflection"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.32"]

[tool.setuptools.packages.find]
include = ["advice_reflection_platform*"]
